Fixed text moving offscreen when hovering on small screens by only scaling it on large screens

--- a/src/index.css
+++ b/src/index.css
@@ -16,8 +16,11 @@ a.nav-link.navbar-brand {
   transition: transform 0.2s ease-in-out;
 }
 
-a.nav-link.navbar-brand:hover {
-  transform: scale(1.2);
+@media (min-width: 768px) {
+  a.nav-link.navbar-brand:hover {
+    transform: scale(1.2);
+    /* font-size: 1.5rem; */
+  }
 }
 
 body {
